// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex Meeting In Meeting 1`] = `
Array [
  <div
    style={
      Object {
        "height": "100%",
        "minHeight": "25rem",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-meeting"
    >
      <div
        className="wxc-in-meeting inner-meeting"
      >
        <div
          className="wxc-remote-media remote-media-in-meeting"
        >
          <video
            autoPlay={true}
            className="wxc-remote-video"
            muted={true}
            playsInline={true}
          />
          <audio
            autoPlay={true}
          />
        </div>
        <div
          className="wxc-local-media local-media-in-meeting"
        >
          <video
            autoPlay={true}
            playsInline={true}
          />
        </div>
        <div
          className="share-notice"
        >
          You're sharing your screen
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "bottom": "1rem",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="wxc-meeting-control-bar"
      >
        <div
          className="controls"
        >
          <button
            alt="Mute"
            aria-label="Mute"
            aria-pressed={null}
            className="md-button md-button--52 wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-microphone-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Mute
              </span>
            </span>
          </button>
          <button
            alt="Stop video"
            aria-label="Stop video"
            aria-pressed={null}
            className="md-button md-button--52 wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-camera-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Stop video
              </span>
            </span>
          </button>
          <button
            alt="Stop Sharing"
            aria-label="Stop Sharing"
            aria-pressed={null}
            className="md-button md-button--circle md-button--56 md-button--red wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-share-screen-presence-stroke_26"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
            </span>
          </button>
          <button
            alt="Leave"
            aria-label="Leave"
            aria-pressed={null}
            className="md-button md-button--circle md-button--56 md-button--red wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-cancel_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Interstitial 1`] = `
Array [
  <div
    style={
      Object {
        "height": "100%",
        "minHeight": "25rem",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-meeting"
    >
      <div
        className="wxc-interstitial-meeting inner-meeting"
      >
        <div
          className="wxc-meeting-info interstitial-meeting-info"
        >
          <h2>
            Quarterly Financial Report
          </h2>
        </div>
        <div
          className="wxc-local-media interstitial-media"
        >
          <video
            autoPlay={true}
            playsInline={true}
          />
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "bottom": "1rem",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="wxc-meeting-control-bar"
      >
        <div
          className="controls"
        >
          <button
            alt="Mute"
            aria-label="Mute"
            aria-pressed={null}
            className="md-button md-button--52 wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-microphone-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Mute
              </span>
            </span>
          </button>
          <button
            alt="Stop video"
            aria-label="Stop video"
            aria-pressed={null}
            className="md-button md-button--52 wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-camera-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Stop video
              </span>
            </span>
          </button>
          <button
            alt="Join meeting"
            aria-label="Join meeting"
            aria-pressed={null}
            className="md-button md-button--52 md-button--green wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <span
                className="button-text"
              >
                Join meeting
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Left Meeting 1`] = `
Array [
  <div
    style={
      Object {
        "height": "100%",
        "minHeight": "25rem",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-meeting"
    >
      You've successfully left the meeting
    </div>
    <div
      style={
        Object {
          "bottom": "1rem",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="wxc-meeting-control-bar"
      >
        <div
          className="controls"
        >
          <button
            alt="Unmute"
            aria-label="Unmute"
            aria-pressed={null}
            className="md-button md-button--52 md-button--red wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-microphone-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Unmute
              </span>
            </span>
          </button>
          <button
            alt="Start video"
            aria-label="Start video"
            aria-pressed={null}
            className="md-button md-button--52 md-button--red wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-camera-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Start video
              </span>
            </span>
          </button>
          <button
            alt="Join meeting"
            aria-label="Join meeting"
            aria-pressed={null}
            className="md-button md-button--52 md-button--green wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <span
                className="button-text"
              >
                Join meeting
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Loading 1`] = `
Array [
  <div
    style={
      Object {
        "height": "100%",
        "minHeight": "25rem",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-meeting"
    >
      <i
        className="md-spinner md-spinner--36 md-spinner--black"
      />
    </div>
    <div
      style={
        Object {
          "bottom": "1rem",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="wxc-meeting-control-bar"
      >
        <div
          className="controls"
        >
          <button
            alt="Unmute"
            aria-label="Unmute"
            aria-pressed={null}
            className="md-button md-button--52 md-button--red wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-microphone-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Unmute
              </span>
            </span>
          </button>
          <button
            alt="Start video"
            aria-label="Start video"
            aria-pressed={null}
            className="md-button md-button--52 md-button--red wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-camera-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Start video
              </span>
            </span>
          </button>
          <button
            alt="Join meeting"
            aria-label="Join meeting"
            aria-pressed={null}
            className="md-button md-button--52 md-button--green wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <span
                className="button-text"
              >
                Join meeting
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex Meeting Waiting For Others 1`] = `
Array [
  <div
    style={
      Object {
        "height": "100%",
        "minHeight": "25rem",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className="wxc-meeting"
    >
      <div
        className="wxc-in-meeting inner-meeting"
      >
        <div
          className="wxc-remote-media remote-media-in-meeting"
        >
          <h4>
            Waiting for others to join...
          </h4>
        </div>
        <div
          className="wxc-local-media local-media-in-meeting"
        >
          <video
            autoPlay={true}
            playsInline={true}
          />
        </div>
        <div
          className="share-notice"
        >
          You're sharing your screen
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "bottom": "1rem",
          "left": 0,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <div
        className="wxc-meeting-control-bar"
      >
        <div
          className="controls"
        >
          <button
            alt="Mute"
            aria-label="Mute"
            aria-pressed={null}
            className="md-button md-button--52 wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-microphone-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Mute
              </span>
            </span>
          </button>
          <button
            alt="Stop video"
            aria-label="Stop video"
            aria-pressed={null}
            className="md-button md-button--52 wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-camera-muted_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
              <span
                className="button-text"
              >
                Stop video
              </span>
            </span>
          </button>
          <button
            alt="Stop Sharing"
            aria-label="Stop Sharing"
            aria-pressed={null}
            className="md-button md-button--circle md-button--56 md-button--red wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-share-screen-presence-stroke_26"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
            </span>
          </button>
          <button
            alt="Leave"
            aria-label="Leave"
            aria-pressed={null}
            className="md-button md-button--circle md-button--56 md-button--red wxc-meeting-control"
            data-md-event-key="md-button-0"
            disabled={false}
            id="md-button-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "style": Object {},
              }
            }
            tabIndex={0}
            type="button"
          >
            <span
              className="md-button__children"
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <i
                aria-label={null}
                className="md-icon icon icon-cancel_28"
                style={
                  Object {
                    "fontSize": 28,
                  }
                }
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
